# tiny-agent

./: .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml
agent_framework/: __main__.py  _config.py  main.py
agent_framework/core/: agent.py  context_budget.py  history_compactor.py  logging.py  memory_store.py  message_assembler.py  policies.py  (+5 more)
core/: agent.py  context.py  context_budget.py  history_compactor.py  message_assembler.py  metrics.py  policies.py  prompt_builder.py  react_protocol.py  runtime.py  sandbox.py  security.py
docs/: how-to-add-provider.md  how-to-add-skill.md  how-to-add-tool.md  liteagent-philosophy-alignment.md
llm/: anthropic_provider.py  base.py  factory.py  openai_provider.py
sessions/: store.py
skills/: __init__.py  registry.py
tests/: conftest.py  test_agent.py  test_anthropic_network_resilience.py  test_anthropic_provider.py  test_cli_events.py  test_cli_progress.py  test_cli_ui_mode.py  test_context_budget.py  test_edit_file_tool.py  test_end_turn_recovery.py  test_extensions_loader.py  test_finish_semantic.py  test_finish_termination.py  test_history_compactor.py  test_job_tool.py  test_memory_store.py  test_message_assembler.py  test_metrics.py  test_network_resilience.py  test_new_tools.py  test_openai_provider.py  test_philosophy_config.py  test_prompt_contract.py  test_providers.py  test_react_protocol.py  test_security.py  test_self_healing.py  test_sessions.py  test_skills.py  test_subagent_flow.py  test_tool_hooks.py  test_tools.py
tools/: bash_tool.py  edit_file_tool.py  file_tools.py  finish_tool.py  grep_tool.py  list_dir_tool.py  registry.py  skill_tool.py  summarize_tool.py
(+29 files in other folders)
