[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-framework"
version = "0.1.0"
description = "Lightweight Python Agent Framework"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.40.0",
]

[project.scripts]
agent = "agent_framework.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["agent_framework*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
files = ["agent_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"